option('xlease',	type : 'feature',	value : 'auto')
option('xdri3',		type : 'feature',	value : 'auto')
option('gbm',		type : 'feature',	value : 'auto')
option('waylease', 	type : 'feature',	value : 'disabled')
option('sorted_fmts',	type : 'boolean',	value : true)
option('valgrind',	type : 'boolean',	value : false)
option('cube',		type : 'feature',	value : 'auto',		description : 'Build cube and add to hello_drmu')
option('ticker',	type : 'feature',	value : 'auto',		description : 'Build ticker and add to hello_drmu')
