option('xlease',	type : 'feature',	value : 'auto',		description : 'Lib for DRM handles derived from X leasing')
option('xdri3',		type : 'feature',	value : 'auto',		description : 'Lib for DRM handles derived from DRI3')
option('gbm',		type : 'feature',	value : 'auto',		description : 'Lib for DRM handles derived from GBM')
option('waylease', 	type : 'feature',	value : 'disabled',	description : 'Lib for DRM handles derived from wayland leasing')
option('sorted_fmts',	type : 'boolean',	value : true,		description : 'Sort formats as part of build for faster lookup')
option('valgrind',	type : 'boolean',	value : false,		description : 'Build drmu for testing with valgrind')
option('cube',		type : 'feature',	value : 'auto',		description : 'Build cube and add to hello_drmu')
option('ticker',	type : 'feature',	value : 'auto',		description : 'Build ticker and add to hello_drmu')
